@@ -495,7 +495,7 @@
     <message>
         <location filename="../../src/configdialog.cpp" line="344"/>
         <source>Disable PulseAudio</source>
-        <translation type="unfinished"></translation>
+        <translation>PulseAudio deaktivieren</translation>
     </message>
     <message>
         <location filename="../../src/configdialog.cpp" line="345"/>
@@ -1240,12 +1240,12 @@ sound system connections through firewalls</source>
     <message>
         <location filename="../../src/help.cpp" line="121"/>
         <source>Disable PulseAudio.</source>
-        <translation type="unfinished"></translation>
+        <translation>PulseAudio deaktivieren.</translation>
     </message>
     <message>
         <location filename="../../src/help.cpp" line="122"/>
         <source>Disable sound input.</source>
-        <translation type="unfinished"></translation>
+        <translation>Audio-Eingang deaktivieren.</translation>
     </message>
     <message>
         <location filename="../../src/help.cpp" line="124"/>
@@ -1405,17 +1405,17 @@ sound system connections through firewalls</source>
     <message>
         <location filename="../../src/help.cpp" line="161"/>
         <source>Use broker credentials as session user/password credentials when using broker mode with broker authentication. Currently only affects direct RDP sessions.</source>
-        <translation type="unfinished"></translation>
+        <translation>Broker-Anmeldedaten als Anmeldedaten (Benutzer/Passwort) für die Sitzung verwenden, wenn im Broker-Modus die Broker-Authentisierung benutzt wird. Betrifft derzeit nur Direkt-RDP-Sitzungen.</translation>
     </message>
     <message>
         <location filename="../../src/help.cpp" line="162"/>
         <source>Use a custom/branded background image (SVG format) for X2Go Client&apos;s main window. If a directory is given, will randomly pick an SVG file inside of it.</source>
-        <translation type="unfinished"></translation>
+        <translation>Ein eigenes Hintergrundbild (im SVG-Format) für das Hauptfenster des X2GoClients verwenden. Wenn ein Verzeichnis angegeben wird, wird zufällig eine SVG-Datei aus diesem Verzeichnis ausgewählt.</translation>
     </message>
     <message>
         <location filename="../../src/help.cpp" line="163"/>
         <source>Use a custom icon (SVG format) for additional branding to replace the default in the lower left corner of X2Go Client&apos;s main window.</source>
-        <translation type="unfinished"></translation>
+        <translation>Ein eigenes Symbolbild (im SVG-Format) als zusätzliche Branding-Möglichkeit in der linken unteren Ecke des Hauptfensters des X2GoClients verwenden (ersetzt das dort befindliche Standard-Symbolbild).</translation>
     </message>
 </context>
 <context>
@@ -1535,7 +1535,7 @@ Public key hash: </source>
     <message>
         <location filename="../../src/httpbrokerclient.cpp" line="184"/>
         <source>Could not find known hosts file. If you accept the host key here, the file will be automatically created.</source>
-        <translation type="unfinished">Die „Known Hosts“-Datei konnte nicht gefunden werden. Wenn Sie den Host-Key hier akzeptieren, dann wird die Datei automatisch erstellt.</translation>
+        <translation>Die „Known Hosts“-Datei konnte nicht gefunden werden. Wenn Sie den Host-Key hier akzeptieren, dann wird die Datei automatisch erstellt.</translation>
     </message>
     <message>
         <location filename="../../src/httpbrokerclient.cpp" line="193"/>
@@ -1649,18 +1649,18 @@ Public key hash: </source>
     <message>
         <location filename="../../src/InteractionDialog.cpp" line="73"/>
         <source>Terminal output:</source>
-        <translation type="unfinished"></translation>
+        <translation>Terminal-Ausgabe:</translation>
     </message>
     <message>
         <location filename="../../src/InteractionDialog.cpp" line="80"/>
         <location filename="../../src/InteractionDialog.cpp" line="117"/>
         <source>Cancel</source>
-        <translation type="unfinished">Abbrechen</translation>
+        <translation>Abbrechen</translation>
     </message>
     <message>
         <location filename="../../src/InteractionDialog.cpp" line="149"/>
         <source>Reconnect</source>
-        <translation type="unfinished">Neu verbinden</translation>
+        <translation>Neu verbinden</translation>
     </message>
 </context>
 <context>
@@ -2430,12 +2430,12 @@ Bitte melden Sie den Fehler wie auf der &lt;a href=&quot;http://wiki.x2go.org/do
     <message>
         <location filename="../../src/onmainwindow.cpp" line="6155"/>
         <source>Failed to start RDP or XMDCP client</source>
-        <translation type="unfinished"></translation>
+        <translation>Konnte RDP oder XDMCP-Client nicht starten</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="6156"/>
         <source>Check session settings and ensure that selected client is installed on your system.</source>
-        <translation type="unfinished"></translation>
+        <translation>Bitte die Sitzungseinstellungen überprüfen und sicherstellen, dass der ausgewählte Client auch auf dem System installiert ist.</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="6256"/>
@@ -2674,12 +2674,12 @@ der Anwendung nicht öffnen.</translation>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="12984"/>
         <source>libssh initialization failure</source>
-        <translation type="unfinished"></translation>
+        <translation>konnte libssh nicht initialisieren</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="12985"/>
         <source>Unable to initialize libssh.</source>
-        <translation type="unfinished"></translation>
+        <translation>Kann libssh nicht initialisieren.</translation>
     </message>
     <message>
         <source>&lt;b&gt;Session ID:&lt;br&gt;Server:&lt;br&gt;Username:&lt;br&gt;Display:&lt;br&gt;Creation Time:&lt;br&gt;Status:&lt;/b&gt;</source>
@@ -3654,12 +3654,12 @@ Sie können SSHD über folgenden Befehl installieren:
     <message>
         <location filename="../../src/onmainwindow.cpp" line="3651"/>
         <source>XDM</source>
-        <translation type="unfinished"></translation>
+        <translation>XDM</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="3657"/>
         <source>RDP</source>
-        <translation type="unfinished"></translation>
+        <translation>RDP</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="4876"/>
@@ -3680,31 +3680,32 @@ Sie können SSHD über folgenden Befehl installieren:
     <message>
         <location filename="../../src/onmainwindow.cpp" line="5012"/>
         <source>Your current color depth is different from the session&apos;s color depth. This may cause problems reconnecting to this session and in most cases &lt;b&gt;you will loose the session&lt;/b&gt; and have to start a new one! </source>
-        <translation type="unfinished"></translation>
+        <translation>Die aktuell verwendete Farbtiefe unterscheidet sich von der der wiederherzustellenden Sitzung. Der Versuch, die Sitzung fortzuführen kann zu Fehlern führen, inbesondere dem &lt;b&gt;Verlust der ganzen Sitzung&lt;/b&gt;!</translation>
     </message>
     <message numerus="yes">
         <location filename="../../src/onmainwindow.cpp" line="5017"/>
         <source>It&apos;s highly recommended to change the color depth of your display to %n bit(s) and restart your X.Org Server before you reconnect to this X2Go session.</source>
         <comment>%n will be replaced with a number</comment>
-        <translation type="unfinished">
-            <numerusform></numerusform>
-            <numerusform></numerusform>
+        <translation>
+            <numerusform>Es wäre wahrscheinlich besser, die Farbtiefe Ihres Displays auf %n bit zu ändern und den X.Org-Server neu zu starten, bevor Sie sich erneut zu dieser Sitzung verbinden versuchen.</numerusform>
+            <numerusform>Es wäre wahrscheinlich besser, die Farbtiefe Ihres Displays auf %n bits zu ändern und den X.Org-Server neu zu starten, bevor Sie sich erneut zu dieser Sitzung verbinden versuchen.</numerusform>
         </translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="5023"/>
         <source>&lt;br /&gt;Do you want to resume this session anyway?</source>
-        <translation type="unfinished"></translation>
+        <translation>&lt;br /&gt;Wollen Sie diese Sitzung trotzdem wiederherstellen versuchen?</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="5408"/>
         <source>PulseAudio is not running</source>
-        <translation type="unfinished"></translation>
+        <translation>PulseAudio läuft nicht
+</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="5409"/>
         <source>Sound output will be disabled for this session. Please enable PulseAudio in the configuration dialog or disable sound in the session settings</source>
-        <translation type="unfinished"></translation>
+        <translation>Audioausgabe wird in dieser Sitzung deaktiviert. Bitte aktivieren Sie PulseAudio im Konfigurationsdialog oder deaktivieren Sie die Audiounterstützung in der Sitzungseinstellung</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="6660"/>
@@ -4851,7 +4852,7 @@ Wollen Sie den versteckten Modus verwenden?</translation>
     <message>
         <location filename="../../src/sessionwidget.cpp" line="87"/>
         <source>Values ranging from &lt;b&gt;0&lt;/b&gt; to &lt;b&gt;65535&lt;/b&gt; are allowed.&lt;br /&gt;A value of &lt;b&gt;0&lt;/b&gt; will either use the port specified in the SSH configuration file belonging to a host or shortname, or use the default of &lt;b&gt;22&lt;/b&gt;.</source>
-        <translation type="unfinished"></translation>
+        <translation>Werte im Bereich von &lt;b&gt;0&lt;/b&gt; bis &lt;b&gt;65535&lt;/b&gt; sind zulässig.&lt;br /&gt;Mit dem Wert&lt;b&gt;0&lt;/b&gt; wird, wenn vorhanden, der Wert aus der SSH-Konfigurationsdatei für den angegebenen Host oder Kurznamen verwendet, ansonsten der Standardwert &lt;b&gt;22&lt;/b&gt;.</translation>
     </message>
     <message>
         <location filename="../../src/sessionwidget.cpp" line="147"/>
@@ -4890,7 +4891,7 @@ Wollen Sie den versteckten Modus verwenden?</translation>
     <message>
         <location filename="../../src/sessionwidget.cpp" line="383"/>
         <source>Direct XDMCP connection</source>
-        <translation type="unfinished"></translation>
+        <translation>Direkte XDMCP-Verbindung</translation>
     </message>
     <message>
         <location filename="../../src/sessionwidget.cpp" line="513"/>
@@ -4901,7 +4902,7 @@ Wollen Sie den versteckten Modus verwenden?</translation>
     <message>
         <location filename="../../src/sessionwidget.cpp" line="526"/>
         <source>direct XDMCP connection</source>
-        <translation type="unfinished"></translation>
+        <translation>direkte XDMCP-Verbindung</translation>
     </message>
     <message>
         <location filename="../../src/sessionwidget.cpp" line="547"/>
@@ -5144,7 +5145,7 @@ sound system connections through firewalls</source>
     <message>
         <location filename="../../src/settingswidget.cpp" line="233"/>
         <source>XDMCP client</source>
-        <translation type="unfinished"></translation>
+        <translation>XDMCP-Client</translation>
     </message>
     <message>
         <location filename="../../src/settingswidget.cpp" line="534"/>
@@ -5288,7 +5289,7 @@ sound system connections through firewalls</source>
     <message>
         <location filename="../../src/sshmasterconnection.cpp" line="205"/>
         <source>Using environment-provided username.</source>
-        <translation type="unfinished"></translation>
+        <translation>Verwende Benutzername aus Environment.</translation>
     </message>
     <message>
         <location filename="../../src/sshmasterconnection.cpp" line="618"/>
@@ -5314,7 +5315,7 @@ sound system connections through firewalls</source>
     <message>
         <location filename="../../src/sshmasterconnection.cpp" line="1790"/>
         <source>Reconnect session</source>
-        <translation type="unfinished"></translation>
+        <translation>Sitzung wiederherstellen</translation>
     </message>
     <message>
         <location filename="../../src/sshmasterconnection.cpp" line="1900"/>
